style.css
/* Newspager theme 

	created by Gus Lally*/ 

form.search {
  overflow: hidden;
  float:right;
  width:200px;
}
div.rp{
	float:right;
	
	
	
}
h1.titles{
	font-size:50px;
}
ul.related{
	float: left;
	clear: both;
}
li.noBullets{
	list-style-type: none;
}
input.search {
  float: right;
  clear: both;
}
.top{
	top: 0;
bottom: 0;
margin: auto;
position: absolute;
left: 0;
right: 0;
margin: 0;
}
input[type=text]:area {
    border: 2px solid;
    padding: 20px; 
    width: 300px;
    resize: both;
    overflow: auto;
}
input[type=submit] {
    background-color:#F5F5F5;
	width: 100;
}
#title{
	list-style-type: none;
  margin: 0;
  padding:0;
  overflow: hidden; 
  background-color:#002334; 
}
ul.topnav {

  list-style-type: none;
  margin: 0;
  padding:0;
  overflow: hidden; 
  background-color:#002334; 
  height:60px;
 
 /* width: 100%;
position: fixed;
*/

}
body {
    padding-top: 100px; /* This should be equal to the height of your header */
}
ul.topnav li {float: left;}

ul.topnav li a {
  display: inline-block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  transition: 0.3s;
  font-size: 16px;
}


ul.footnav {
		vertical-align: top;
  list-style-type: none;
  margin: 0;
  padding:0;
  overflow: hidden; 
  background-color:#E0E0E0 ; 
}
ul.footnav li {float: left;}

ul.footnav li a {
	
  display: inline-block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  transition: 0.3s;
  font-size: 16px;
}
iframe.preview{
	width: 300 px;
	height: 200 px;
}
iframe.embed {
	width:800px;
	height: 450px;
 

	}

iframe.nextPost{
	width:400px;
	height: 225px;
}
ul.nav li a:hover {background-color: #404040}

ul.nav li.icon {display: none;}

ul.nav{
	width: 100%;
	position: fixed;


}


a:link{
	color: black;
	text-decoration:none; 

}
a:visited{
color: black;
}
ul.nav{
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color:#E8E8E8;
}

a.nounderline:link  
{  
 text-decoration:none;  
 color: black;
}  

h1{
	color: #707070  ;
}

h2{
	float: center;
	font-size:25px;
}

h3{
	
	font-size: 16px;
	color: #686868;
}
li {
    float: left;
	
}

li a {
    display: inline-block;
    color: grey;
    text-align: center;
    padding: 14px 16px;
	text-decoration:none;
}




body{
		background-color:#F8F8F8;
		
}
.right {
    float: right;
    width: 300px;
    
}
.center {
    float: center;
    width: 300px;
    
}
.left {
    float: left;
    width: 300px;
}  


div.post {

    width: 65%;
    padding: 0px;
    border: 25px black;
    margin: 25px;
	background-color:#F8F8F8;
	

}
div.comment {
	
    width: 200px;
    padding: 25px;
    border: 25px black;
    margin: 25px;
	
	
	

}

input[type=text] {
    border-radius: 4px;
	display: inline-block;
    color: black;
    text-align: center;
    padding: 10px 13px;
}
p {
	text-align:justify ;
 
}
input[type=text].search{
	background-image: url('searchicon.png');
	background-repeat: no-repeat;

}
input[type=text]:focus {
    width: 100%;
}
.post{
	background-color: white;
	
		
} 
.foot {
	background-color:#404040 ;
	
}




@media screen and (max-width: 1024px){
	div.post{
		width:700px;
		
	}
	iframe.nextPost{
	width:300px;
	height: 169px;
}
}
@media screen and (max-width: 768px){
	div.post{
		width:525px;
	}
	iframe.nextPost{
	width:200px;
	height: 112px;
}
}

/* Tablet and smartphone screen size */
@media screen and  (max-width:700px) {	
iframe.embed {
	width:500px;
	height: 315px;
 

	}
	div.post{
		width:550px;
	}
	div.rp{
   
    clear:both;
	bottom: 0px;
	
	}
	
	video.smallPreview{
		width: 75px;
		height: 50px;
	}
	iframe.preview{
		width: 150px;
		height: 100px;
	}
	iframe.smallPreview{
		width: 75px;
		height: 50px;
	}
	iframe {

	width:300px;
	height: 169px;
 

	}
	iframe.nextPost{
	width:200px;
	height: 112px;
}
	ul.nav{
		display:block;
		 float:center;
	}
	 ul.nav li:not(:first-child) {display: none;}
  ul.nav li.icon {
    float: bottom;
	display: inline-block;
	margin:0px;
	
  }
	
	
	input[type=text]{
		float: bottom;
	 
	}
	
	textarea{
		float: left;
		size:5px;
	}
	table{
			display: inline-block;
			margin:0px;
			width:0px;
	}
	
	a{
		margin:0px;
	
		color:black;
	}
    
	td{
		float: bottom;
		display: block;
		margin:0px;
		font-size:8px;
	}
	p{
		margin:0px;
		font-size:16px;
		
	}	
  ul.nav.responsive {position: fixed; height: 100%;
	width:100%; }
  ul.nav.responsive li.icon {
    position: absolute;
    right: 0;
    top: 0;
	
  }
  ul.nav.responsive li {
	float: none;
    display: block;
	
  }
  ul.nav.responsive li a {
    display: block;
    text-align: center;
	font-size:250%;

  }
 
}


/* size for videos on small screens */
@media screen and  (max-width:189px) {	

	iframe.embed {

	width:300px;
	height:169px;
	overflow:hidden;

	}
	

}

